# book-store-app

./: .env  .gitignore  LICENCE  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/book_store/: backend_pre_start.py  initial_data.py  main.py  test_pre_start.py
backend/book_store/core/: config.py  db.py  deps.py
backend/book_store/moduls/: __init__.py
backend/book_store/routes/: init_routes.py  utils.py
backend/bookstore/: backend_pre_start.py  initial_data.py  main.py  test_pre_start.py
backend/bookstore/api/: init_routes.py
backend/bookstore/api/routes/: authors.py  genre.py  language.py  utils.py
backend/bookstore/api/routes/book/: authors.py  book_author.py  book_genre.py  book_prices.py  books.py  genre.py  inventories.py  inventory_movements.py  language.py  publishers.py
backend/bookstore/api/routes/payment/: currency.py
backend/bookstore/core/: db.py  deps.py
backend/bookstore/db/crud/: utils.py
backend/bookstore/db/crud/book/: __init__.py  author.py  book.py  book_author.py  book_genre.py  book_price.py  genre.py  inventory.py  inventory_movement.py  language.py  publisher.py
backend/bookstore/db/crud/payment/: currency.py
backend/bookstore/db/models/: __init__.py
backend/bookstore/db/models/book/: __init__.py  author.py  book.py  book_author.py  book_genre.py  book_price.py  genre.py  inventory.py  inventory_movement.py  language.py  publisher.py
backend/bookstore/db/models/payment/: currency.py
backend/bookstore/db/schemas/book/: __import__.py  author.py  book.py  book_author.py  book_genre.py  book_price.py  genre.py  inventory.py  inventory_movement.py  language.py
backend/bookstore/routes/: init_routes.py  utils.py
backend/scripts/: prestart.sh  tests-start.sh
backend/tests/: conftest.py
backend/tests/api/routes/: test_authors.py  test_genres.py  test_languages.py  utils.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/utils/: utils.py
backend/tests/utils/book/: author.py  genre.py  language.py
(+15 files in other folders)
